refixing navbar white space issue

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,7 +1,7 @@
 .mat-toolbar {
   transition: all 0.3s ease;
   will-change: transform;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 100;
   height: 80px;
@@ -10,10 +10,6 @@
 .nav-scroll {
   box-shadow: #676a6b 0px 2px 4px;
   height: 65px;
-}
-
-.nav-bg {
-  background-color: #5386e4;
 }
 
 .fill-remaining-space {
