--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -1,5 +1,12 @@
+@import "../../website-colors.scss";
+
 .welcome-bg {
-  background-color: #5386e4;
+  background-color: $mdc-theme-primary;
+  padding-top: 50px;
+}
+
+.welcome {
+  text-align: left;
 }
 
 .name {
@@ -11,7 +18,7 @@
 
 .hello {
   font-family: "Inconsolata", sans-serif;
-  color: #9efffa;
+  color: $mdc-theme-accent;
   font-size: 2.5vw;
 }
 
@@ -22,6 +29,10 @@
 
   .hello {
     font-size: 20px;
+  }
+
+  my-browser {
+    width: 70vw;
   }
 }
 
